# app/common/request/role.go
@@ -1,0 +1,14 @@
+package request
+
+//type RolePageQueryForm struct {
+//	Search   string `form:"search" json:"search" example:""`
+//	PageSize int    `form:"pageSize" json:"pageSize" example:"10" binding:"required"`
+//	PageNo   int    `form:"pageNo" json:"pageNo" example:"1" binding:"required"`
+//}
+//
+//func (rolePageQueryForm RolePageQueryForm) GetMessages() ValidatorMessages {
+//	return ValidatorMessages{
+//		"pageNo.required":   serviceErrors.PageNoIsNotEmpty,
+//		"pageSize.required": serviceErrors.PageSizeIsNotEmpty,
+//	}
+//}
