# app/common/request/user.go
@@ -38,15 +38,15 @@ func (login Login) GetMessages() ValidatorMessages {
 	}
 }
 
-type UserPageQueryForm struct {
-	Search   string `form:"search" json:"search" example:""`
-	PageSize int    `form:"pageSize" json:"pageSize" example:"10" binding:"required"`
-	PageNo   int    `form:"pageNo" json:"pageNo" example:"1" binding:"required"`
-}
-
-func (userPageQueryForm UserPageQueryForm) GetMessages() ValidatorMessages {
-	return ValidatorMessages{
-		"pageNo.required":   serviceErrors.PageNoIsNotEmpty,
-		"pageSize.required": serviceErrors.PageSizeIsNotEmpty,
-	}
-}
+//type UserPageQueryForm struct {
+//	Search   string `form:"search" json:"search" example:""`
+//	PageSize int    `form:"pageSize" json:"pageSize" example:"10" binding:"required"`
+//	PageNo   int    `form:"pageNo" json:"pageNo" example:"1" binding:"required"`
+//}
+//
+//func (userPageQueryForm UserPageQueryForm) GetMessages() ValidatorMessages {
+//	return ValidatorMessages{
+//		"pageNo.required":   serviceErrors.PageNoIsNotEmpty,
+//		"pageSize.required": serviceErrors.PageSizeIsNotEmpty,
+//	}
+//}
